@@ -27,16 +27,16 @@ dependencies {
     implementation ('org.apache.commons:commons-dbcp2:2.12.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'commons-net:commons-net:3.10.0'
+    implementation 'commons-net:commons-net:3.11.0'
     implementation ('com.github.samtools:htsjdk:3.0.5') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.22.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.5'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.0'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.23.0.0'
+    implementation 'org.springframework:spring-jdbc:6.1.6'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
