@@ -1,3 +1,7 @@
+Sep 13, 2024
+  agr: implemented stable ids
+  jbrowse2 gff files: added UTH_SHR, UTH_SHRSP and UTH_WKY to list of processed rat assemblies
+
 Jul 11, 2024
   agr: added export of chromosome regions in header
 
